fix layout problems

--- a/Frontend/jeddebook_site/src/components/common/templates/image-search/ImageSearch.module.css
+++ b/Frontend/jeddebook_site/src/components/common/templates/image-search/ImageSearch.module.css
@@ -14,6 +14,7 @@
   font-size: 250%;
   font-weight: 350;
   position: relative;
+  padding: 5px;
 }
 .headerUnderline {
   height: 2px;
